AMP-745 Implement prosecution case lookup endpoint
Adds GET /prosecution-case/cases/{caseURN} which resolves the URN via
system-id-mapper-service, fetches case data from prosecution-casefile-service,
and returns a defendants/offences view. Includes unit and integration tests.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>